src/ui/snapshots/settl__ui__snapshot_tests__playing_trade_response.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&buf)
---
┌ Board ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌────────────────────────────────────┐
│                                                                                                                                  ││ Game   AI                          │
│                                                                                                                                  ││▸Alice 0VP                          │
│                                                                                                                                  ││  Wood:0 Brick:0 Sheep:0            │
│                                                                                                                                  ││  Wheat:0 Ore:0                     │
│                                                                                                                                  ││                                    │
│                                                                                                                                  ││ Bob 0VP                            │
│                                            *                                       *                                             ││  Resources: 0                      │
│                                               3:1                                                                                ││                                    │
│                                         ╱     ╲             ╱     ╲             ╱     ╲2:Wheat                                   ││ Charlie 0VP                        │
│                                       ╱         ╲         ╱         ╲         ╱         ╲                                        ││  Resources: 0                      │
│                                     ╱             ╲  *  ╱             ╲     ╱             ╲  *                                   ││                                    │
│                                    ╱      Ore      ╲   ╱     Sheep     ╲   ╱     Wood      ╲                                     ││ Diana 0VP                          │
│                                           10                   2                   9                                             ││  Resources: 0                      │
│                                    ╲               ╱   ╲               ╱   ╲               ╱                                     ││                                    │
│                                  *  ╲             ╱     ╲             ╱     ╲             ╱                                      ││Turn: 1                             │
│                                       ╲         ╱         ╲         ╱         ╲         ╱                                        ││Phase: Setup                        │
│                        2:Wood ╱     ╲   ╲     ╱   ╱     ╲   ╲     ╱   ╱     ╲   ╲     ╱   ╱     ╲                                ││Deck: 25 cards                      │
│                             ╱         ╲         ╱         ╲         ╱         ╲         ╱         ╲                              ││                                    │
│                        *  ╱             ╲     ╱             ╲     ╱             ╲     ╱             ╲  *                         ││                                    │
│                          ╱     Wheat     ╲   ╱     Brick     ╲   ╱     Sheep     ╲   ╱     Brick     ╲                           ││────────────────────────────────────│
│                                 12                   6                   4                  10         2:Ore                     ││Game started -- your turn will show │
│                          ╲               ╱   ╲               ╱   ╲               ╱   ╲               ╱                           ││a prompt                            │
│                           ╲             ╱     ╲             ╱     ╲             ╱     ╲             ╱  *                         ││q:quit  ?:help  j/k:scroll          │
│                             ╲         ╱         ╲         ╱         ╲         ╱         ╲         ╱                              ││Tab:Game/AI                         │
│                     ╱     ╲   ╲     ╱   ╱     ╲   ╲     ╱   ╱     ╲   ╲     ╱   ╱     ╲   ╲     ╱   ╱     ╲                      ││                                    │
│                   ╱         ╲         ╱         ╲         ╱         ╲         ╱         ╲         ╱         ╲                    ││                                    │
│                 ╱             ╲     ╱             ╲     ╱             ╲     ╱             ╲     ╱             ╲  *               ││                                    │
│                ╱     Wood      ╲   ╱     Wheat     ╲   ╱  R Desert     ╲   ╱     Wood      ╲   ╱      Ore      ╲                 ││                                    │
│                        9                  11                   R                   3                   8          3:1            ││                                    │
│                ╲               ╱   ╲               ╱   ╲               ╱   ╲               ╱   ╲               ╱                 ││                                    │
│                 ╲             ╱     ╲             ╱     ╲             ╱     ╲             ╱     ╲             ╱  *               ││                                    │
│                   ╲         ╱         ╲         ╱         ╲         ╱         ╲         ╱         ╲         ╱                    ││                                    │
│                     ╲     ╱   ╱     ╲   ╲     ╱   ╱     ╲   ╲     ╱   ╱     ╲   ╲     ╱   ╱     ╲   ╲     ╱                      ││                                    │
│                             ╱         ╲         ╱         ╲         ╱         ╲         ╱         ╲                              ││                                    │
│                        *  ╱             ╲     ╱             ╲     ╱             ╲     ╱             ╲                            ││                                    │
│                          ╱     Wood      ╲   ╱      Ore      ╲   ╱     Wheat     ╲   ╱     Sheep     ╲                           ││                                    │
│                   2:Brick        8                   3                   4                   5                                   ││                                    │
│                          ╲               ╱   ╲               ╱   ╲               ╱   ╲               ╱                           ││                                    │
│                        *  ╲             ╱     ╲             ╱     ╲             ╱     ╲             ╱  *                         ││                                    │
│                             ╲         ╱         ╲         ╱         ╲         ╱         ╲         ╱                              ││                                    │
│                               ╲     ╱   ╱     ╲   ╲     ╱   ╱     ╲   ╲     ╱   ╱     ╲   ╲     ╱2:Sheep                         ││                                    │
│                                       ╱         ╲         ╱         ╲         ╱         ╲                                        ││                                    │
│                                     ╱             ╲     ╱             ╲     ╱             ╲  *                                   ││                                    │
│                                    ╱     Brick     ╲   ╱     Wheat     ╲   ╱     Sheep     ╲                                     ││                                    │
│                                            5                   6                  11                                             ││                                    │
│                                    ╲               ╱   ╲               ╱   ╲               ╱                                     ││                                    │
│                                     ╲             ╱  *  ╲             ╱     ╲             ╱  *                                   ││                                    │
│                                       ╲         ╱         ╲         ╱         ╲         ╱                                        ││                                    │
│                                         ╲     ╱             ╲     ╱             ╲     ╱  3:1                                     ││                                    │
│                                               3:1                                                                                ││                                    │
│                                            *                                       *                                             ││                                    │
│                                                                                                                                  ││                                    │
│                                                                                                                                  ││                                    │
│                                                                                                                                  ││                                    │
│                                                                                                                                  ││                                    │
│                                                                                                                                  ││                                    │
│                                                                                                                                  ││                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────┘
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Trade offer from Bob                                                                                                                                                   │
│ Offering: 2 Wood  Wanting: 1 Ore                                                                                                                                       │
│ [y]es accept  [n]o reject                                                                                                                                              │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 TRADE OFFER  | q:quit  ?:help  Tab:Game/AI
