src/ui/snapshots/settl__ui__snapshot_tests__size_warning.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&buf)
---


                   ███████╗███████╗████████╗████████╗██╗
                   ██╔════╝██╔════╝╚══██╔══╝╚══██╔══╝██║
                   ███████╗█████╗     ██║      ██║   ██║
                   ╚════██║██╔══╝     ██║      ██║   ██║
                   ███████║███████╗   ██║      ██║   ███████╗
              ┌─────────────── Terminal Too Small ───────────────┐
              │                                                  │
              │  Current size: 80x24                             │
              │  Minimum size: 130x60                            │
              │                                                  │
              │  Resize your terminal for the best experience.   │
              │                                                  │
              │  Press any key to continue...                    │
              └──────────────────────────────────────────────────┘
                                 About
                                 Quit

                     [↑↓] navigate  [Enter] select  [q] quit
